--- a/kadai01/index.html
+++ b/kadai01/index.html
@@ -18,7 +18,7 @@
     <h2>Favorite Websites</h2>
     <ol>
         <li><a href="https://www.goole.com">goole</a></li>
-        <li><a href="https://www.yahoo.com"></a></li>
+        <li><a href="https://www.yahoo.com">yahoo</a></li>
     </ol>
     <h2>My Favorite Image</h2>
     <img src="https://via.placeholder.com/150" alt="Example Image">
