--- a/kadai01/index.html
+++ b/kadai01/index.html
@@ -9,7 +9,7 @@
     <p>Welcome to my first web page! This is a paragraph of text.</p>
     <h3>About me</h3>
     <p>I am learning HTML to create awesome web pages.</p>
-    <h2>My Hobbis</h2>
+    <h2>My Hobbies</h2>
     <ul>
         <li>Reading</li>
         <li>Coding</li>
