--- a/kadai01/index.html
+++ b/kadai01/index.html
@@ -17,7 +17,7 @@
     </ul>
     <h2>Favorite Websites</h2>
     <ol>
-        <li><a href="https://www.goole.com">goole</a></li>
+        <li><a href="https://www.google.com">google</a></li>
         <li><a href="https://www.yahoo.com">yahoo</a></li>
     </ol>
     <h2>My Favorite Image</h2>
