--- a/kadai02/index.html
+++ b/kadai02/index.html
@@ -2,8 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>kadai02<title>
+    <style>
+        
+    </style>
 </head>
 <body>
     
