--- a/kadai02/index.html
+++ b/kadai02/index.html
@@ -2,12 +2,68 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>kadai02<title>
+    <title>kadai02</title>
     <style>
-        
+        body {
+            margin: 0;
+            font-family: sans-serif;
+        }
+
+        .container {
+            width: 800px;
+            height: 600px;
+            display: flex;
+            background-color: #fef4d9;
+        }
+
+        .sidebar {
+            width: 250px;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .photo {
+            width: 250px;
+            height: 250px;
+            object-fit: cover;
+            border: 1px solid #ccc;
+        }
+
+        .menu {
+            background-color: #ddd;
+            padding: 10px;
+            margin-top: 10px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .description {
+            margin-top: 10px;
+            font-size: 0.9em;
+            background-color: #f9f9f9;
+            padding: 10px;
+            border: 1px solid #ccc;
+        }
+
+        .main-content {
+            flex: 1;
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <img src="photo.jpg" alt="任意の写真" class="photo">
+            <div class="menu">メニュー１</div>
+            <div class="description">
+                このメニューは、このような構成にしています。<br>
+                なお、いつでも美味しい体験を約束しています。是非、いかがでしょうか。
+            </div>
+        </div>
+        <div class="main-content">
+            <!-- 必要に応じて自由にコンテンツを追加 -->
+        </div>
+    </div>
 </body>
 </html>
