--- a/kadai02/index.html
+++ b/kadai02/index.html
@@ -1,68 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>kadai02</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: sans-serif;
-        }
-
-        .container {
-            width: 800px;
-            height: 600px;
-            display: flex;
-            background-color: #fef4d9;
-        }
-
-        .sidebar {
-            width: 250px;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        .photo {
-            width: 250px;
-            height: 250px;
-            object-fit: cover;
-            border: 1px solid #ccc;
-        }
-
-        .menu {
-            background-color: #ddd;
-            padding: 10px;
-            margin-top: 10px;
-            text-align: center;
-            font-weight: bold;
-        }
-
-        .description {
-            margin-top: 10px;
-            font-size: 0.9em;
-            background-color: #f9f9f9;
-            padding: 10px;
-            border: 1px solid #ccc;
-        }
-
-        .main-content {
-            flex: 1;
-            padding: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>kadai02</title>
+  <style>
+    .container { width: 800px; height: 600px; background: #fef4d9; display: flex; margin: 0 auto; border: 1px solid #ccc; }
+    .sidebar { width: 250px; padding: 10px; box-sizing: border-box; }
+    img { width: 250px; height: 250px; object-fit: cover; border: 1px solid #999; }
+    .menu { background: #ccc; text-align: center; padding: 10px; margin-top: 10px; font-weight: bold; }
+    .text { padding: 10px; font-size: 14px; background: #fff; margin-top: 10px; border: 1px solid #ccc; }
+    .main-content { flex: 1; padding: 10px; }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <img src="photo.jpg" alt="任意の写真" class="photo">
-            <div class="menu">メニュー１</div>
-            <div class="description">
-                このメニューは、このような構成にしています。<br>
-                なお、いつでも美味しい体験を約束しています。是非、いかがでしょうか。
-            </div>
-        </div>
-        <div class="main-content">
-        </div>
+
+  <div class="container">
+    <div class="sidebar">
+      <img src="photo.jpg" alt="任意の写真">
+      <div class="menu">メニュー１</div>
+      <div class="text">
+        このメニューは、このような構成にしています。<br>
+        なお、いつでも美味しい体験を約束しています。<br>
+        是非、いかがでしょうか。
+      </div>
     </div>
+    <div class="main-content">
+      <!-- ここに自由な内容を追加してOK -->
+    </div>
+  </div>
+
 </body>
 </html>
