--- a/kadai02/index.html
+++ b/kadai02/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <h1>本日のおすすめドーナッツ</h1>
-  <img src="donut.jpg" alt="おいしそうなドーナッツ">
+  <img src="images/donut.01.webp" alt="ドーナッツ">
   <p>ふわふわで甘さひかえめ。コーヒーと一緒にいかが？</p>
 
 </body>
