--- a/kadai02/index.html
+++ b/kadai02/index.html
@@ -12,7 +12,7 @@
 
   <h1>本日のおすすめドーナッツ</h1>
   <img src="images/donut.01.webp" alt="ドーナッツ">
-  <p>ふわふわで甘さひかえめ。コーヒーと一緒にいかが？</p>
+  <p>ふわふわで甘さひかえめです。コーヒーと一緒にいかがでしょうか？</p>
 
 </body>
 </html>
