--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Styled WEb Page</title>    
 </head>
 <body>
+    <h1>My First Web Page</h1>
+    <h2>Introduction</h2>
+    <p>Welcome to my styled web page! This is a paragraph of styled with CSS.</p>
+    <h3>A bout me</h3>
     
 </body>
 </html>
