--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -7,7 +7,34 @@
     <h1>My First Web Page</h1>
     <h2>Introduction</h2>
     <p>Welcome to my styled web page! This is a paragraph of styled with CSS.</p>
-    <h3>A bout me</h3>
+    <h3>A bout Me</h3>
+    <p>I am learning HTML and CSS to create beautifully styled web pages.</p>
+    <h2>My Hobbies</h2>
+    <ul>
+        <li>Reading</li>
+        <li>Coding</li>
+        <li>Traveling</li>
+    </ul>
+    <h2>Favorite Websites</h2>
+    <ol>
+        <li><a href="https://www.gku.ac.jp/">岐阜協立大学のサイトへ</a></li>
+        <li><a href="https://www.pref.gifu.lg.jp/">岐阜県のサイトへ</a></li>
+    </ol>
+    <h2>My Favorite Image</h2>
+    <img src="images/kadai03image01.jpg" alt="Example image">
+    <h2>Contact Information</h2>
+     <table border="1">
+        <tr>
+            <th> Name</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>John Doe</td>
+            <td>john@example.com</td>
+        </tr>
+    </table>
     
+
+
 </body>
 </html>
