--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -1,7 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Styled WEb Page</title>    
+    <title>Styled WEb Page</title> 
+    <style>
+    body {
+        background-color: #f0f8ff;
+        padding: 30px;
+        font-family: Arial, sans-serif;
+        color: #333;
+    }
+
+    h1 {
+        color: #2e8b57;
+        text-align: center;
+    }
+
+    h2 {
+        color: #1e90ff;
+        border-bottom: 2px solid #1e90ff;
+        padding-bottom: 5px;
+    }
+
+    h3 {
+        color: #006400;
+    }
+
+    p {
+        background-color: #e6f7ff;
+        padding: 10px;
+        border-left: 5px solid #1e90ff;
+        line-height: 1.6;
+    }
+
+    img {
+        display: block;
+        margin: 20px auto;
+        border: 6px solid #4682b4;
+        width: 60%;
+        box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
+    }
+
+    table {
+        margin: 20px auto;
+        border-collapse: collapse;
+        width: 80%;
+    }
+
+    th, td {
+        border: 1px solid #ccc;
+        padding: 10px;
+        text-align: center;
+    }
+
+    th {
+        background-color: #4682b4;
+        color: white;
+    }
+
+    td {
+        background-color: #f9f9f9;
+    }
+
+    a {
+        color: #d2691e;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #ff4500;
+        text-decoration: underline;
+    }
+</style>
 </head>
 <body>
     <h1>My First Web Page</h1>
