--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -2,6 +2,26 @@
 <html lang="en">
 <head>
     <title>Styled WEb Page</title> 
+    <style>
+    h1 {
+        color: green;
+    }
+
+    h2 {
+        color: blue;
+    }
+
+    h3 {
+        color: darkgreen;
+    }
+
+    img {
+        display: block;
+        margin: 20px auto;
+        border: 4px solid #4682b4;
+        width: 60%;
+    }
+</style>
 </head>
 <body>
     <h1>My First Web Page</h1>
