--- a/kadai04/index.html
+++ b/kadai04/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>自転車紹介</h1>
+        <h1>MyProduct</h1>
     </header>
     <section class="product-section">
         <img src="image/bicycle.jpg" alt="自転車のイメージ">
