--- a/kadai05/index.html
+++ b/kadai05/index.html
@@ -11,19 +11,19 @@
   <section class="box1">
     <h2>Box 1</h2>
     <p>このボックスはライトブルー背景で、ボーダーが濃い線、角は丸みを帯びています。</p>
-    <img src="img/box1.jpg" alt="Box1 Image">
+    <img src="images/box1.jpg" alt="Box1 Image">
   </section>
 
   <section class="box2">
     <h2>Box 2</h2>
     <p>このボックスはライトオレンジ背景で、ボーダーと軽い影がついています。</p>
-    <img src="img/box2.jpg" alt="Box2 Image">
+    <img src="images/box2.jpg" alt="Box2 Image">
   </section>
 
   <section class="box3">
     <h2>Box 3</h2>
     <p>このボックスはライトパープル背景で、ダッシュ線のボーダーが適用されています。</p>
-    <img src="img/box3.jpg" alt="Box3 Image">
+    <img src="images/box3.jpg" alt="Box3 Image">
   </section>
 </body>
 </html>
