--- a/kadai06/index.html
+++ b/kadai06/index.html
@@ -20,67 +20,67 @@
     <main class="catalog">
     <div class="card">
   <img src="https://picsum.photos/300?random=101" alt="商品画像">
-  <p>Urban Shirt</p>
+  <p>Ｔシャツ</p>
   <span>¥3,980</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=102" alt="商品画像">
-  <p>Street Jacket</p>
+  <p>ジャケット</p>
   <span>¥7,800</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=103" alt="商品画像">
-  <p>Canvas Tote</p>
+  <p>スカート</p>
   <span>¥2,400</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=104" alt="商品画像">
-  <p>Minimal Sneaker</p>
+  <p>ショルダーバッグ</p>
   <span>¥9,200</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=105" alt="商品画像">
-  <p>Classic Hat</p>
+  <p>ニット帽</p>
   <span>¥1,900</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=106" alt="商品画像">
-  <p>City Pants</p>
+  <p>スニーカー</p>
   <span>¥5,600</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=107" alt="商品画像">
-  <p>Denim Skirt</p>
+  <p>デニムパンツ</p>
   <span>¥4,500</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=108" alt="商品画像">
-  <p>Loose Hoodie</p>
+  <p>パーカー</p>
   <span>¥6,980</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=109" alt="商品画像">
-  <p>Relax T-shirt</p>
+  <p>トートバッグ</p>
   <span>¥2,200</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=110" alt="商品画像">
-  <p>Mono Backpack</p>
+  <p>キャップ</p>
   <span>¥5,000</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=111" alt="商品画像">
-  <p>Chunky Shoes</p>
+  <p>ワンピース</p>
   <span>¥8,800</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=112" alt="商品画像">
-  <p>Layered Shirt</p>
+  <p>サンダル</p>
   <span>¥3,400</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=113" alt="商品画像">
-  <p>Line Socks 3pack</p>
+  <p>靴下</p>
   <span>¥980</span>
 </div>
 <div class="card">
@@ -90,7 +90,7 @@
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=115" alt="商品画像">
-  <p>Eco Bag</p>
+  <p>えこばっぐ</p>
   <span>¥1,500</span>
 </div>
     </main>
