--- a/kadai06/index.html
+++ b/kadai06/index.html
@@ -85,12 +85,12 @@
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=114" alt="商品画像">
-  <p>Wool Knit</p>
-  <span>¥6,300</span>
+  <p>ベルト</p>
+  <span>¥3,300</span>
 </div>
 <div class="card">
   <img src="https://picsum.photos/300?random=115" alt="商品画像">
-  <p>えこばっぐ</p>
+  <p>エコバッグ</p>
   <span>¥1,500</span>
 </div>
     </main>
