--- a/kadai07/index.html
+++ b/kadai07/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ひだまりソリューションズ</title>
+  <title></title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>ひだまりソリューションズ</h1>
+    <h1>リューション</h1>
     <nav>
       <a href="#about">会社概要</a>
       <a href="#services">サービス</a>
@@ -18,24 +18,23 @@
   <main>
     <section id="about" class="section">
       <h2>会社概要</h2>
-      <p>私たちは地域密着型のITソリューション企業として、クラウド導入やウェブ制作を通じた業務改善を支援しています。</p>
+      <p>私たちは最新トレンドを取り入れたオンラインファッションサービスを提供する企業です。ファッション業界をみんなで盛り上げていきましょう。</p>
     </section>
 
     <section id="services" class="section">
       <h2>サービス紹介</h2>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7" alt="Web制作">
-        <h3>Web制作</h3>
-        <p>スマートフォン対応のモダンなWebサイトを制作します。</p>
+        <img src="image/work.jpg" alt="仕事の様子">
+        <h3>ファッションサイト</h3>
+        <p>最新のトレンドアイテムを豊富にそろえたオンラインストア。</p>
       </div>
       <div class="card">
-        <h3>クラウド導入支援</h3>
-        <p>Google WorkspaceやMicrosoft 365などの導入をサポートします。</p>
+        <h3>スタイリングコーチ</h3>
+        <p>プロのスタイリストがあなたに合うコーデを提案します。</p>
       </div>
       <div class="card">
-        <h3>デジタル研修</h3>
-        <p>業務効率化のためのITスキル研修を提供します。</p>
-      </div>
+        <h3>レンタルサービス</h3>
+        <p>この服着てみたいけど似合うか不安、、、そんな方に始めたサービス。</p>
     </section>
 
     <section id="contact" class="section">
