--- a/kadai07/index.html
+++ b/kadai07/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ひだまりソリューションズ</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <header>
+    <h1>ひだまりソリューションズ</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">会社概要</a></li>
+        <li><a href="#services">サービス</a></li>
+        <li><a href="#contact">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about" class="section">
+      <h2>会社概要</h2>
+      <p>私たちは地域密着型のITソリューション企業として、クラウド導入やウェブ制作を通じた業務改善を支援しています。</p>
+    </section>
+
+    <section id="services" class="section">
+      <h2>サービス紹介</h2>
+
+      <div class="card">
+        <h3>Web制作</h3>
+        <img src="img/service.jpg" alt="Web制作の様子" />
+        <p>スマートフォン対応のモダンなWebサイトを制作します。</p>
+      </div>
+
+      <div class="card">
+        <h3>クラウド導入支援</h3>
+        <p>Google WorkspaceやMicrosoft 365などの導入をサポートします。</p>
+      </div>
+
+      <div class="card">
+        <h3>デジタル研修</h3>
+        <p>中小企業向けのITリテラシー研修も承っています。</p>
+      </div>
+    </section>
+
+    <section id="contact" class="section">
+      <h2>お問い合わせ</h2>
+      <form>
+        <label>お名前
+          <input type="text" name="name" required />
+        </label>
+        <label>メールアドレス
+          <input type="email" name="email" required />
+        </label>
+        <label>メッセージ
+          <textarea name="message" rows="5" required></textarea>
+        </label>
+        <button type="submit">送信</button>
+      </form>
+    </section>
+  </main>
+
+</body>
+</html>
