--- a/kadai07/index.html
+++ b/kadai07/index.html
@@ -30,7 +30,7 @@
 
       <div class="card">
         <h3>Web制作</h3>
-        <img src="img/service.jpg" alt="Web制作の様子" />
+        <img src="image/work.jpg" alt="Web制作の様子" />
         <p>スマートフォン対応のモダンなWebサイトを制作します。</p>
       </div>
 
