--- a/sample01/sample01-01.html
+++ b/sample01/sample01-01.html
@@ -29,7 +29,7 @@
 <form onchange="checkSum();">
     <label><input type="checkbox" id="c1">夜間照明 (1000円)</label><br>
     <label><input type="checkbox" id="c2">ネット (300円)</label><br>
-    <label><input type="checkbox" id="c3">ボール (400円)</label>
+    <label><input type="checkbox" id="c3">ボール×10個 (400円)</label>
 </form>
 <p>合計金額　<span id="total">2000円</span></p>
   
@@ -49,4 +49,5 @@ function checkSum() {
 }
 </script>
 </body>
+
 </html>
