--- a/tahiti02/tahiti02-1.html
+++ b/tahiti02/tahiti02-1.html
@@ -11,6 +11,6 @@
     </script>
 </head>
 <body>
-    <img src="tahiti01.jpg" alt="タヒチの写真">
+    <img src="tahiti01.jpg" alt="タヒチの写真" onclick="photoInfo();">
 </body>
 </html>
