--- a/sample06/sample06-02.html
+++ b/sample06/sample06-02.html
@@ -6,7 +6,10 @@
     <meta charset="UTF-8">
     <title>変数の演算</title>
 </head>
+
 <body>
-    
+<h1>インクリメントとデクリメント</h1>
+<p>a=5のときに、a++を実行すると？<button onclink="showInc();">解答</button></p>
+<p>a=5のときに、a--をを実行すると？<button onclink="showDec();">解答</button></p>
 </body>
 </html>
