--- a/kadai7-1/kadai7-1.html
+++ b/kadai7-1/kadai7-1.html
@@ -20,7 +20,12 @@
 
    <script>
     const liList = document.querySelectorAll('#countries li');
-    const flags =[
+    const flags = [
+  "flag_CHN.png",
+  "flag_IND.png",
+  "flag_USA.png",
+  "flag_IDN.png"
+];
    
     
 ];
@@ -31,4 +36,5 @@ document.getElementById('btn').addEventListener('click',function(){
 });
    </script>
 </body>
+
 </html>
