--- a/kadai7-2/kadai7-2.html
+++ b/kadai7-2/kadai7-2.html
@@ -34,14 +34,13 @@
       "photo_5.jpg",
       "photo_6.jpg",
       "photo_7.jpg",
-      "photo_8.jpg"
-    ];
-
+      "photo_8.jpg",
+    let html = "";
     photos.forEach(function(src) {
-      let img = document.createElement("img");
-      img.src = src;
-      photosDiv.appendChild(img);
+      html += `<img src="${src}" alt="">`;
     });
+
+    photosDiv.insertAdjacentHTML("beforeend", html);
 
     btn.remove();
   });
