--- a/kadai7-2/kadai7-2.html
+++ b/kadai7-2/kadai7-2.html
@@ -27,14 +27,15 @@
   btn.addEventListener("click", function() {
 
     const photos = [
-      "photo_1.jpg",
-      "photo_2.jpg",
-      "photo_3.jpg",
-      "photo_4.jpg",
-      "photo_5.jpg",
-      "photo_6.jpg",
-      "photo_7.jpg",
-      "photo_8.jpg",
+      "images/photo_1.jpg",
+      "images/photo_2.jpg",
+      "images/photo_3.jpg",
+      "images/photo_4.jpg",
+      "images/photo_5.jpg",
+      "images/photo_6.jpg",
+      "images/photo_7.jpg",
+      "images/photo_8.jpg",
+    ];
     let html = "";
     photos.forEach(function(src) {
       html += `<img src="${src}" alt="">`;
