--- a/kadai9-01/kadi9-01②.html
+++ b/kadai9-01/kadi9-01②.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h2>Click Counter ★ switch + for構文</h2>
+<h2>Click Counter ★ for構文</h2>
 
 <p>クリック回数：<span id="count">0</span> 回</p>
 
@@ -73,4 +73,5 @@
 
 </body>
 </html>
+
 
