--- a/kadai11-2/kadai11-2.html
+++ b/kadai11-2/kadai11-2.html
@@ -23,22 +23,22 @@
 
 <script>
 function show() {
-  let anser = [];   // 解を保存する配列
-  let count = 0;    // 見つけた解の個数
-  let x = 1;        // 調べ始める数
+  let anser = [];
+  let count = 0;
+  let x = 1;
 
-  while (true) {    // 無限ループ → 解3つ見つけたらbreak
+  while (true) {
     let y = x*x*x - 53*x*x + 620*x - 1036;
 
     if (y === 0) {
-      anser[count] = x;  // 解を配列に保存
-      count++;          // 解をカウント
+      anser[count] = x;
+      count++;
 
       if (count === 3) {
-        break;          // 3個見つかったら終了
+        break;
       }
     }
-    x++;   // 次の数へ
+    x++;
   }
 
   document.getElementById("message").innerHTML =
@@ -48,3 +48,4 @@ function show() {
 
 </body>
 </html>
+
