--- a/kadai12-1/kadai12-1.html
+++ b/kadai12-1/kadai12-1.html
@@ -6,15 +6,43 @@
 <style>
    .big_font {
     font-size: 30px;
-
    }
+   #result {
+    background-color: #ffcc99;
+    width: 300px;
+    height: 60px;
+    padding: 10px;
+    margin-top: 15px;
+}
 </style>  
 </head>
 <body>
 <h3>1～10で割り切れる数字</h3>
 <p>1、2、3、4、5、6、7、8、9、10で割り切れる最小の数値をJavaScriptで求めます。</p>
+
 <button onclick="show()">結果を見る</button>
 
-    
+<div id="result">ここに結果が表示されます。</div>    
+
+<script>
+    function calc() {
+        let num = 1;
+        while (true) {
+            let allOK = true;
+            for (let i = 1; i <= 10; i++){
+                if (nam % i  ! ==0 ) {
+                    allOK = false;
+                }
+            }
+            if (allOK) return num;
+            num++;
+        }
+    }
+    function show() {
+        const answer = calc();
+        document.getElementById("result").innerText = "答えは" + anser + "です。";
+    }
+</script>
+
 </body>
 </html>
