--- a/web2_oshizukan_3240366_近澤希優/index.html
+++ b/web2_oshizukan_3240366_近澤希優/index.html
@@ -28,7 +28,7 @@
 
 <div id="message" class="big_font"></div>
 
-<img id="photo" src="images/chiikawa.png">
+<img id="photo" src="img/集合.png">
 
 <script>
 function show() {
@@ -62,3 +62,4 @@ function show() {
 
 </body>
 </html>
+
