--- a/web2_oshizukan_3240366_近澤希優/index.html
+++ b/web2_oshizukan_3240366_近澤希優/index.html
@@ -21,14 +21,12 @@
     <article class="card">
       <img src="img/ちいかわ.jpg" alt="ちいかわ">
       <h2>ちいかわ</h2>
-      <p>
-        小さくて臆病だけど、優しくて一生懸命がんばるキャラ。
-        怖いことや不安なことがあっても、少しずつ前に進もうとする姿がとても応援したくなる。
-        時々ご褒美をもらえるとすごく嬉しそうで、そこがまた愛おしいポイント。
-      </p>
+      <p>ちっちゃくて臆病だけど、優しくて一生懸命がんばるキャラ。
+        怖いこと、不安なことがあっても少しずつ前に進もうとする姿がとても頑張り屋さんでかっこいい！
+        たまにご褒美をもらえるとすごく嬉しそうで、そこがかわいすぎる！！！！</p>
       <ul>
         <li>感情豊か</li>
-        <li>がんばり屋</li>
+        <li>頑張り屋</li>
         <li>癒される存在</li>
       </ul>
     </article>
@@ -37,9 +35,9 @@
       <img src="img/ハチワレ.jpeg" alt="ハチワレ">
       <h2>ハチワレ</h2>
       <p>
-        明るくてポジティブな性格で「なんとかなるよ！」が口癖。
-        つらいことがあっても前向きな言葉で周りを励ますムードメーカー。
-        知識が豊富でしっかり者な一面もあり、ちいかわを支える存在になっている。
+        明るくてポジティブで、「なんとかなるよ！」が口癖。
+        つらいことがあっても前向きな言葉で周りを励ましてあげるムードメーカー！！！
+        知識が豊富でしっかり者な一面もあり、ちいかわを支える存在の頼もしいキャラ！！
       </p>
     </article>
 
@@ -47,9 +45,9 @@
       <img src="img/うさぎ.jpg" alt="うさぎ">
       <h2>うさぎ</h2>
       <p>
-        超ハイテンションで自由奔放。突然叫んだり踊ったり、
-        何を考えているかわからないところが面白い。
-        でも実は仲間思いで、いざという時はちゃんと助けてくれるギャップが魅力。
+        超ハイテンションで自由奔放！
+        急に叫んだり踊ったり、何を考えているかわからないところが面白い。
+        でも実は仲間思いで、いざという時はちゃんと助けてくれるギャップが魅力！！！
       </p>
     </article>
 
@@ -66,7 +64,8 @@
       <img src="img/ラッコ師匠.jpg" alt="ラッコ師匠">
       <h2>ラッコ師匠</h2>
       <p>
-        強くて頼れる存在。戦いがとても上手く、みんなの憧れのキャラ。
+        強くて頼れる存在。
+        戦いがとても上手く、みんなの憧れ！！！
         時々スパルタだけど、的確なアドバイスでちいかわたちを成長させる。
       </p>
     </article>
@@ -86,4 +85,5 @@
 
 </body>
 </html>
+
 
