--- a/web2_oshizukan_3240366_近澤希優/index.html
+++ b/web2_oshizukan_3240366_近澤希優/index.html
@@ -56,7 +56,7 @@
       <h2>モモンガ</h2>
       <p>
         かわいいアピールが得意で、褒められるとすごく嬉しそうにするわがまま系。
-        大きな目と表情がクセになる。甘えん坊なところも人気の理由。
+        大きな目と表情がクセになる！甘えん坊なところも人気の理由！！
       </p>
     </article>
 
@@ -85,5 +85,6 @@
 
 </body>
 </html>
+
 
 
