--- a/web2_oshizukan_3240366_近澤希優/index.html
+++ b/web2_oshizukan_3240366_近澤希優/index.html
@@ -25,8 +25,8 @@
         怖いこと、不安なことがあっても少しずつ前に進もうとする姿がとても頑張り屋さんでかっこいい！
         たまにご褒美をもらえるとすごく嬉しそうで、そこがかわいすぎる！！！！</p>
       <ul>
-        <li>感情豊か</li>
-        <li>頑張り屋</li>
+        <li>小さくてかわいい見た目</li>
+        <li>よく泣くけど優しい性格</li>
         <li>癒される存在</li>
       </ul>
     </article>
@@ -39,6 +39,11 @@
         つらいことがあっても前向きな言葉で周りを励ましてあげるムードメーカー！！！
         知識が豊富でしっかり者な一面もあり、ちいかわを支える存在の頼もしいキャラ！！
       </p>
+      <ul>
+        <li>前向きで明るい</li>
+        <li>ちいかわの親友</li>
+        <li>頼もしい存在</li>
+      </ul>
     </article>
 
     <article class="card">
@@ -49,6 +54,11 @@
         急に叫んだり踊ったり、何を考えているかわからないところが面白い。
         でも実は仲間思いで、いざという時はちゃんと助けてくれるギャップが魅力！！！
       </p>
+      <ul>
+        <li>テンションが高い</li>
+        <li>予測できない行動</li>
+        <li>場の空気を変える存在</li>
+      </ul>
     </article>
 
     <article class="card">
@@ -58,6 +68,11 @@
         かわいいアピールが得意で、褒められるとすごく嬉しそうにするわがまま系。
         大きな目と表情がクセになる！甘えん坊なところも人気の理由！！
       </p>
+      <ul>
+        <li>かわいいアピ</li>
+        <li>少しわがまま</li>
+        <li>印象に残る存在</li>
+      </ul>
     </article>
 
     <article class="card">
@@ -68,12 +83,17 @@
         戦いがとても上手く、みんなの憧れ！！！
         時々スパルタだけど、的確なアドバイスでちいかわたちを成長させる。
       </p>
+      <ul>
+        <li>強い</li>
+        <li>みんなの目標</li>
+        <li>憧れの存在</li>
+      </ul>
     </article>
 
   </section>
 
   <p class="link">
-    公式サイトはこちら → 
+    公式サイト→→→
     <a href="https://chiikawa-info.jp/" target="_blank">https://chiikawa-info.jp/</a>
   </p>
 
